--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "coding challenge ",
   "main": "main.js",
   "scripts": {
-    "start": "http-server .",
+    "start": "http-server -o / .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
